# PyRMVtransport

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  .pypirc  .travis.yaml  .travis.yml  LICENSE  Makefile  Pipfile  README.md  mypy.ini  pyproject.toml  setup.py  tox.ini
.circleci/: config.yaml  config.yml
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: codeql-analysis.yml  publish-to-test-pypi.yml  pythonpackage.yml
RMVtransport/: __init__.py  const.py  errors.py  rmvjourney.py  rmvtransport.py  rmvtravel.py
fixtures/: bad_request.xml  bug_3006907.xml  request.xml  request_bad_product.xml  request_midnight.xml  request_no_journeys.xml  request_no_timestamp.xml  result_bad.json  result_midnight.json  result_products_filter.json  result_simple.json  result_simple.txt  stops.response
tests/: common.py  conftest.py  test_bugs.py  test_rmvtransport.py
